--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
         <java.version>17</java.version>
         <jasperreport-version>6.19.1</jasperreport-version>
         <apache-poi-ooxml-version>5.2.2</apache-poi-ooxml-version>
-        <json-version>20220320</json-version>
+        <bouncycastle-version>1.70</bouncycastle-version>
+        <apache-commons-text-version>1.9</apache-commons-text-version>
     </properties>
     <dependencies>
 
@@ -46,18 +47,6 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-        <!-- Database -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
         <!-- Commons -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -83,16 +72,16 @@
             <version>${apache-poi-ooxml-version}</version>
         </dependency>
         <dependency>
-            <groupId>net.sf.jasperreports</groupId>
-            <artifactId>jasperreports</artifactId>
-            <version>${jasperreport-version}</version>
-            <scope>compile</scope>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bouncycastle-version}</version>
         </dependency>
         <dependency>
-            <groupId>net.sf.jasperreports</groupId>
-            <artifactId>jasperreports-fonts</artifactId>
-            <version>${jasperreport-version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${apache-commons-text-version}</version>
         </dependency>
+
     </dependencies>
 
     <build>
